--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to my web site - Return2root. This is the start-out branch</h1>
+    <h1>Welcome to my web site - return2root.com</h1>
     <script src="script.js"></script>
 </body>
 </html>
