add css directory

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
+    <title>Contact - Your Website</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -21,8 +21,14 @@
         </nav>
     </header>
     <main>
-        <h1>Welcome to Your Website</h1>
-        <p>This is the landing page of your website.</p>
+        <h1>Contact Us</h1>
+        <p>Name: Your Name</p>
+        <p>Address: 1234 Street Name, City, State, ZIP</p>
+        <p>Email: your.email@example.com</p>
+        <p>Instagram: <a href="https://instagram.com/yourhandle">@yourhandle</a></p>
+        <p>Facebook: <a href="https://facebook.com/yourhandle">@yourhandle</a></p>
+        <p>Twitter: <a href="https://twitter.com/yourhandle">@yourhandle</a></p>
+        <p>YouTube: <a href="https://youtube.com/yourchannel">Your Channel</a></p>
     </main>
     <footer>
         <p>&copy; 2023 Your Website</p>
